<resources>
    <string name="app_name">Routine</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_routine">New Routine</string>
    <string name="title_hint">Routine Title</string>
    <string name="description_hint">Routine description</string>
    <string name="frequency">Frequency</string>
    <string name="hourly">Hourly</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="routines">Routines</string>
    <string name="no_routines">You have no Routines.</string>
    <string name="period_am">am</string>
    <string name="period_pm">pm</string>
    <string name="next_up">Next Up</string>
    <string name="mark_as_done">Mark As Done</string>
    <string name="next_routine_check">Your next routine check is %s</string>
    <string name="above_70_percent_report">Good job! You have over 70% check rate for this routine.</string>
    <string name="below_70_percent_report">You can do better! You have less than 70% check rate for this routine.</string>
</resources>
